--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>
-      Arache Yzadi works in Skotidakis
+      Arache Yzadi works in Skotidakiss
     </h1>
 
   </body>
